--- a/src/pages/gamelist.astro
+++ b/src/pages/gamelist.astro
@@ -1,200 +1,15 @@
 ---
 import Layout from '../layouts/Base.astro';
+import {Content as GameList} from './gamelist.md';
 ---
+
+
 
 <Layout
 	title="GameServer List"
 >
-	<h1 class="title">Steam Games</h1>
-        - [7 Days To Die](7_days_to_die)
-        - [Abiotic Factor](abiotic_factor/)
-        - [ARK: Survival Ascended](ark_survival_ascended)
-        - [ARK: Survival Evolved](ark_survival_evolved)
-        - [Arma](arma)
-          - [Arma 3](arma/arma3)
-          - [Arma Reforger](arma/arma_reforger)
-        - [Assetto Corsa](assetto_corsa)
-        - [Astro Colony](astro_colony)
-        - [Avorion](avorion)
-        - [Barotrauma](barotrauma)
-        - [BATTALION: Legacy](/battalion_legacy)
-        - [Black Mesa](black_mesa)
-        - [Citadel: Forged with Fire](citadel)
-        - [Colony Survival](colony_survival)
-        - [Conan Exiles](conan_exiles)
-        - [Core Keeper](core_keeper)
-        - [Counter-Strike](counter_strike)
-        - [Craftopia](craftopia)
-        - [Cryofall](cryofall)
-        - [DayZ](dayz)
-        - [DDNet](ddnet)
-        - [Dead Matter](dead_matter)
-        - [Don't Starve Together](dont_starve)
-        - [ECO](eco)
-        - [Empyrion - Galactic Survival](empyrion)
-        - [Enshrouded](enshrouded)
-        - [Fistful of Frags](fof)
-        - [Foundry](foundry)
-        - [Frozen Flame](frozen_flame)
-        - [Garry's Mod](gmod)
-        - [Ground Branch](ground_branch)
-        - [HLDS Server](hlds_server)
-          - [HLDS Vanilla](hlds_server/vanilla)
-          - [ReHLDS](hlds_server/rehlds)
-        - [Holdfast: Nations At War](holdfast)
-        - [HumanitZ](humanitz)
-        - [Hurtworld](hurtworld)
-        - [Icarus](icarus)
-        - [Insurgency: Sandstorm](insurgency_sandstorm)
-        - [iosoccer](iosoccer)
-        - [Killing Floor 2](killing_floor_2)
-        - [Left 4 Dead](left4dead)
-        - [Left 4 Dead 2](left4dead_2)
-        - [Longvinter](longvinter)
-        - [Midnight Ghost Hunt](midnight_ghost_hunt/)
-        - [Modiverse](modiverse)
-        - [Mordhau](mordhau)
-        - [Mount & Blade II: Bannerlord](mount_blade_II_bannerlord)
-        - [Myth of Empires](myth_of_empires)
-        - [Necesse](necesse)
-        - [Neos VR](neosvr)
-        - [No More Room in Hell](nmrih)
-        - [No Love Lost](no_love_lost)
-        - [No One Survived](no_one_survived)
-        - [Nova-Life: Amboise](novalife_amboise)
-        - [Onset](onset)
-        - [Open Fortress](open_fortress)
-        - [Operation: Harsh Doorstop](operation_harsh_doorstop)
-        - [Palworld](palworld)
-        - [Pavlov VR](pavlov_vr)
-        - [PixARK](pixark)
-        - [Portal Knights](portal_knights)
-        - [Post Scriptum](post_scriptum)
-        - [Project Zomboid](project_zomboid)
-        - [Quake Live](quake_live)
-        - [Resonite](resonite)
-        - [Rising World](rising_world)
-          - [Legacy Java](rising_world/legacy)
-          - [Unity](rising_world/unity)
-        - [Risk Of Rain 2](risk_of_rain_2)
-        - [Rust](rust)
-          - [Autowipe](rust/rust_autowipe)
-          - [Staging](rust/rust_staging)
-        - [Satisfactory](satisfactory)
-        - [SCP: Secret Laboratory](scpsl)
-          - [Dedicated](scpsl/dedicated)
-          - [Exiled](scpsl/exiled)
-        - [Smalland: Survive the Wilds](smalland_survive_the_wilds)
-        - [Solace Crafting](solace_crafting)
-        - [Soldat](soldat)
-        - [Sons of the Forest](sonsoftheforest)
-        - [Soulmask](soulmask)
-        - [SourceCoop](sourcecoop)
-        - [Space Engineers](space_engineers)
-          - [Default](space_engineers/default)
-          - [Torch](space_engineers/torch)
-        - [Squad](squad)
-        - [Starbound](starbound)
-        - [Stationeers](stationeers)
-          - [Vanilla](stationeers/stationeers_vanilla)
-          - [BepInEx](stationeers/stationeers_bepinex)
-        - [Stormworks: Build and Rescue](stormworks)
-        - [Subnautica: Nitrox Mod](subnautica_nitrox_mod)
-        - [Sven Co-op](svencoop)
-        - [Swords 'n Magic and Stuff](swords_'n_Magic_and_Stuff)
-        - [Team Fortress 2 Classic](team_fortress_2_classic)
-        - [TerraTech Worlds](terratech_worlds)
-        - [The Forest](the_forest)
-        - [The Isle](the_isle)
-          - [Evrima](the_isle/evrima)
-        - [The Front](thefront)
-        - [Tower Unite](tower_unite)
-        - [Truck Simulator](truck-simulator)
-          - [American Truck Simulator](truck-simulator/american-truck-simulator)
-          - [Euro Truck Simulator 2](truck-simulator/euro-truck-simulator2)
-        - [Unturned](unturned)
-        - [V Rising](v_rising)
-          - [Vanilla](v_rising/v_rising_vanilla)
-          - [BepInex](v_rising/v_rising_bepinex)
-        - [Valheim](valheim)
-          - [Vanilla](valheim/valheim_vanilla)
-          - [BepInEx](valheim/valheim_bepinex)
-          - [Plus Mod](valheim/valheim_plus)
-        - [VEIN](vein)
-        - [Wurm Unlimited](wurm_unlimited/)
+<h1>GameList</h1>
+<GameList />
 
-	<h1 class="title">Standalone Games</h1>
-
-        - [Among Us](among_us)
-        - [Impostor Server](among_us/impostor_server)
-        - [CrewLink Server](among_us/crewlink_server)
-      - [BeamNG.drive](beamng)
-        - [BeamMP Server](beamng/beammp)
-        - [KissMP](beamng/kissmp)
-      - [ClassiCube](classicube)
-        - [MCGalaxy](classicube/mcgalaxy)
-      - [Clone Hero](clone_hero)
-      - [CS2D](cs2d)
-      - [Cube Engine](cubeengine)
-        - [AssaultCube](cubeengine/assaultcube)
-        - [Cube 2: Sauerbraten](cubeengine/cube2)
-      - [DDRaceNetwork](ddracenetwork)
-      - [Doom](doom)
-        - [Zandronum](doom/zandronum)
-      - [Escape from Tarkov (Singleplayer)](eft)
-      - [Factorio](factorio)
-        - [Vanilla](factorio/factorio)
-        - [ModUpdate](factorio/factorio-modupdate)
-        - [Clusterio](factorio/clusterio)
-      - [Foundry VTT](foundry_vtt)
-      - [FTL: Tachyon](ftl_tachyon)
-      - [Grand Theft Auto](gta)
-        - GTA V
-          - [FiveM](gta/fivem)
-          - [ragecoop](gta/ragecoop)
-          - [RageMP](gta/ragemp)
-          - [alt:V](gta/altv)
-        - GTA SA
-          - [Multi Theft Auto](gta/mtasa)
-          - [SA-MP](gta/samp)
-          - [OpenMp](gta/openmp)
-        - GTA
-          - [GTAC](gta/gtac)
-      - [Hogwarp](hogwarp)
-      - [Kerbal Space Program](ksp)
-      - [League Sandbox](leaguesandbox)
-      - [Los Angeles Crimes](losangelescrimes)
-      - [Mindustry](mindustry)
-      - [Minetest](minetest)
-      - [Medal of Honor: Allied Assault](mohaa)
-      - [Neverwinter Nights: Enhanced Edition](neverwinter_nights_ee)
-      - [OpenArena](openarena)
-      - [OpenRA](openra)
-        - [Dune2000](openra/openra_dune2000)
-        - [Red Alert](openra/openra_red_alert)
-        - [Tiberian Dawn](openra/openra_tiberian_dawn)
-      - [OpenRCT2](openrct2)
-      - [OpenTTD](openttd)
-      - [Path Of Titans](path_of_titans)
-      - [Red Dead Redemption](rdr)
-        - [RedM](rdr/redm)
-      - [Rimworld](rimworld)
-        - [Open World](rimworld/open_world)
-        - [Rimworld Together](rimworld/together)
-      - [Spacestation 14](spacestation_14)
-      - [Starmade](starmade)
-      - [SuperTuxCart](supertuxkart)
-      - [Teeworlds](teeworlds)
-      - [Terraria](terraria)
-        - [tModLoader](terraria/tmodloader)
-        - [TShock](terraria/tshock)
-        - [Vanilla](terraria/vanilla)
-      - [Urban Terror](urbanterror)
-      - [Veloren](veloren)
-      - [Vintage Story](vintage_story)
-      - [Wolfenstein: Enemy Territory](wolfenstein_enemy_territory)
-        - [ET: Legacy](wolfenstein_enemy_territory/etlegacy)
-      - [Wine (Generic/Template Egg)](wine/generic)
-      - [Xonotic](xonotic)
 </Layout>
 
