--- a/src/pages/gamelist.astro
+++ b/src/pages/gamelist.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Base.astro';
-import BlogPost from '../../layouts/BlogPost.astro';
+import BlogPost from '../layouts/BlogPost.astro';
 import {Content as GameList} from './gamelist.md';
 ---
 
