--- a/src/pages/gamelist.astro
+++ b/src/pages/gamelist.astro
@@ -10,7 +10,7 @@ import {Content as GameList} from './gamelist.md';
 	title="GameServer List"
 >
 <h1>GameList</h1>
-<BlogPost post={post}>
+<BlogPost post={GameList}>
   <GameList />
 </BlogPost>
 </Layout>
