--- a/src/pages/gamelist.astro
+++ b/src/pages/gamelist.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Base.astro';
 import BlogPost from '../layouts/BlogPost.astro';
 import {Content as GameList} from './gamelist.md';
+import { getAllPosts } from '@/utils';
 ---
 
 
