--- a/src/pages/gamelist.astro
+++ b/src/pages/gamelist.astro
@@ -3,6 +3,7 @@ import {Content as GameList} from './gamelist.md';
 import type { InferGetStaticPropsType, GetStaticPaths } from 'astro';
 import BlogPost from '../../layouts/BlogPost.astro';
 import { getAllPosts } from '@/utils';
+import BaseLayout from '../layouts/Base.astro';
 
 export const getStaticPaths = (async () => {
 	const blogEntries = await getAllPosts();
@@ -17,7 +18,8 @@ const { post } = Astro.props;
 const { Content } = await post.render();
 ---
 
-<BlogPost post={post}>
-	<GameList />
-</BlogPost>
-
+<BaseLayout title="404">
+  <BlogPost post={post}>
+    <GameList />
+  </BlogPost>
+</BaseLayout>
