--- a/src/pages/gamelist.astro
+++ b/src/pages/gamelist.astro
@@ -1,7 +1,7 @@
 ---
 import {Content as GameList} from './gamelist.md';
 import type { InferGetStaticPropsType, GetStaticPaths } from 'astro';
-import BlogPost from '../../layouts/BlogPost.astro';
+import BlogPost from '../layouts/BlogPost.astro';
 import { getAllPosts } from '@/utils';
 import BaseLayout from '../layouts/Base.astro';
 
