--- a/src/pages/gamelist.astro
+++ b/src/pages/gamelist.astro
@@ -5,6 +5,7 @@ import BaseLayout from '../layouts/Base.astro';
 ---
 
 <BaseLayout>
-<p>
-</p>
+  <BlogPost post={GameList}>
+    <GameList />
+  </BlogPost>
 </BaseLayout>
