--- a/src/pages/gamelist.astro
+++ b/src/pages/gamelist.astro
@@ -1,10 +1,15 @@
 ---
-import BlogPost from '../layouts/BlogPost.astro';
-import BaseLayout from '../layouts/Base.astro';
+import Layout from '../layouts/Base.astro';
 ---
 
-<BaseLayout>
-  <BlogPost post={GameList}>
-    <GameList />
-  </BlogPost>
-</BaseLayout>
+<Layout
+	title="About Me"
+	description="Lorem ipsum dolor sit amet"
+	image="/blog-placeholder-about.jpg"
+>
+	<h1 class="title">Contact Us:</h1>
+	<p>
+		Hi, I'm only available via E-Mail currently. You can reach out to me at ortegatalks@gmail.com.
+	</p>
+
+</Layout>
